@@ -183,7 +183,17 @@
 	// it's now possible to use things like $('*:tinymce') to get all TinyMCE bound elements.
 	$.extend($.expr[":"], {
 		tinymce: function(e) {
-			return !!(e.id && "tinymce" in window && tinymce.get(e.id));
+			var editor;
+
+			if (e.id && "tinymce" in window) {
+				editor = tinymce.get(e.id);
+
+				if (editor && editor.editorManager === tinymce) {
+					return true;
+				}
+			}
+
+			return false;
 		}
 	});
 
@@ -309,13 +319,15 @@
 				}
 
 				if (value !== undef) {
-					self.filter(":tinymce").each(function(i, node) {
-						var ed = tinyMCEInstance(node);
+					if (typeof value === "string") {
+						self.filter(":tinymce").each(function(i, node) {
+							var ed = tinyMCEInstance(node);
 
-						if (ed) {
-							ed.setContent(prepend ? value + ed.getContent() : ed.getContent() + value);
-						}
-					});
+							if (ed) {
+								ed.setContent(prepend ? value + ed.getContent() : ed.getContent() + value);
+							}
+						});
+					}
 
 					origFn.apply(self.not(":tinymce"), arguments);
 
